[package]
name = "cirro"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/danjones1618/cirro"
description = "Unify development dashboards into a single TUI"

[dependencies]
catppuccin = { version = "2.5.0-beta.0", features = ["ratatui"] }
clap = { version = "4.5.23", features = ["derive", "unicode"] }
crossterm = "0.28.1"
etcetera = "0.8.0"
fakeit = "1.3.0"
itertools = "0.14.0"
keyring = {version = "3.6.1", features = ["apple-native", "windows-native", "linux-native-sync-persistent"]}
nerd_fonts = "0.1.9"
ratatui = "0.29.0"
rpassword = "7.3.1"
serde = "1.0.217"
thiserror = "2.0.9"
toml = "0.8.19"
url = { version = "2", features = ["serde"] }
